Try to fix statusbar bug on IOS.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -116,13 +116,13 @@ h1 {
     50% { opacity: 0.4; }
     to { opacity: 1.0; }
 }
- 
+
 @-webkit-keyframes fade {
     from { opacity: 1.0; }
     50% { opacity: 0.4; }
     to { opacity: 1.0; }
 }
- 
+
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
@@ -144,4 +144,18 @@ input[type=number].input-lg{
     height: 100px !important;
     max-height: 100px !important;
     overflow:auto !important;
+}
+
+#ios7statusbar
+{
+    width:100%;
+    height:20px;
+    background-color:white;
+    position:fixed;
+    z-index:200;
+}
+
+.ios7 .ui-page
+{
+    margin-top: 20px;
 }
